spring-boot-rest-service-hello-world/k8s-deployment.yml
# kubernetes deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-rest-hello-world
  labels:
    app: spring-boot-rest-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-rest-hello-world
  template:
    metadata:
      labels:
        app: spring-boot-rest-hello-world
    spec:
      containers:
        - name: spring-boot-rest-hello-world
          image: chayanjavaarch/spring-boot-hands-on-lab:spring-boot-rest-hello-world
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-hello-world
spec:
  type: LoadBalancer
  selector:
    app: spring-boot-rest-hello-world
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
